fix: Correct the padding between elements
`htmlnano` compressed too much –
we reverted the configuration back to the default, which works.

--- a/src/style/body.scss
+++ b/src/style/body.scss
@@ -5,10 +5,6 @@ body {
 
 a {
     color: rgb(169, 182, 242);
-
-    &::before {
-        content: " ";
-    }
 }
 
 // We use '!important' here to override
